Added about.html and modified index.html, javascript, styles file

--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
     <link rel="stylesheet" href="/style.css">
     
 </head>
-<body >
+<body>
     <header id="main_header">
        <div class="logo"><h2>Logo</h2></div>
+       <!-- Below is the Hamburger and its container -->
        <button class="menuButtonContainer">
          <span class="hamburger">
 
@@ -19,8 +20,9 @@
        <nav class="navbar">
          <ul class="navlist">
             <li> <a href="#"class="navlinks"> Home</a></li>
-            <li> <a href="#" class="navlinks">About</a> </li>
+            <li> <a href="about.html" class="navlinks">About</a> </li>
             <li> <a href="#" class="navlinks">Contact</a> </li>
+            <li> <a href="#" class="navlinks">Login</a> </li>
          </ul>
          
        </nav>
