added new code like testjs

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
          <ul class="navlist">
             <li> <a href="#"class="navlinks"> Home</a></li>
             <li> <a href="about.html" class="navlinks">About</a> </li>
+            <li> <a href="class.html" class="navlinks">Javascript Classes</a> </li>
             <li> <a href="#" class="navlinks">Contact</a> </li>
             <li> <a href="#" class="navlinks">Login</a> </li>
          </ul>
@@ -34,8 +35,13 @@
 
     <section class="gal">
       <div class="car1">
-        <img src="" alt="" style="max-width: 150px;" id="demo">
+        <img src="" alt="" style="max-width: 250px;" id="demo">
       </div>
+
+      <h1 id="account_name"></h1>
+      <p id="account_num"></p>
+
+      <p id="test"></p>
       <!-- <div class="car2">
         <img src="/assets/car2.jpg" alt="" style="max-width: 150px;">
       </div>
@@ -49,6 +55,7 @@
     
 
 
-    <script src="/script.js"></script>
+    <script type="module"  src="/script.js"></script>
+    <!-- <script type="module"  src="/js_obj.js"></script> -->
 </body>
 </html> 
